--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Shorten long  URLs ",
   "main": "express_server.js",
   "dependencies": {
+    "body-parser": "^1.15.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0"
   },
