--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.15.2",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-alpha.2",
     "ejs": "^2.5.5",
     "express": "^4.14.0"
   },
